--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="background">
         <div class="placeForColorPicker">
-            <label><input class="exampleInput" type="text" name="exampleInput" value="#FFFFFF"></label>
+            <label><input class="exampleInput"  type="text" name="exampleInput" value="#FFFFFF"/></label>
             <div class="showColorPicker" id="showColorPicker"></div>
         </div>
 
@@ -23,8 +23,8 @@
 
     <script src="jquery.colorPicker.js" type="text/javascript"></script>
     <script>
-        $('body').colorPicker('.exampleInput', '.showColorPicker');
-        //$('.placeForColorPicker').colorPicker()
+        //$('body').colorPicker('.exampleInput', '.showColorPicker');
+        $('.placeForColorPicker').colorPicker()
     </script>
 
 </body>
