add changes in css  & js files

--- a/index.html
+++ b/index.html
@@ -7,25 +7,15 @@
     <script src="jquery.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="background">
-        <div class="placeForColorPicker">
-            <label><input class="exampleInput"  type="text" name="exampleInput" value="#FFFFFF"/></label>
-            <div class="showColorPicker" id="showColorPicker"></div>
-        </div>
-
-
+<div class="background">
+    <div class="placeForColorPicker">
+        <label><input class="exampleInput"  type="text" name="exampleInput" readonly='readonly' value="#FFFFFF"/></label>
+        <div class="showColorPicker" id="showColorPicker"></div>
     </div>
+</div>
 
-
-
-
-
-
-    <script src="jquery.colorPicker.js" type="text/javascript"></script>
-    <script>
-        //$('body').colorPicker('.exampleInput', '.showColorPicker');
-        $('.placeForColorPicker').colorPicker()
-    </script>
+<script src="jquery.colorPicker.js" type="text/javascript"></script>
+<script src="example.js" type="text/javascript"></script>
 
 </body>
 </html>
