--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="background">
     <div class="placeForColorPicker">
-        <label><input class="exampleInput"  type="text" name="exampleInput" readonly='readonly' value="#FFFFFF"/></label>
+        <label><input class="exampleInput"  type="text" name="exampleInput" readonly='readonly' value="#000000"/></label>
         <div class="showColorPicker" id="showColorPicker"></div>
     </div>
 </div>
